src/objects/AB2__AdBookDynamicProperty__c.object
<CustomObject>
    <description>Stores possible AdBook Dynamic Properties for Orders and Drops. Includes columns to define ordering and visibility.</description>
    <fields>
        <fullName>AB2__DynamicPropertyID__c</fullName>
        <description>AdBook System ID for the dynamic property</description>
        <externalId>true</externalId>
        <inlineHelpText>AdBook System ID for the dynamic property</inlineHelpText>
        <label>UDF ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AB2__DynamicPropertyType__c</fullName>
        <description>Text Text value 
Integer 64 bit integer value 
Decimal Real number 
List ID value from a list. Use the GetDynamicPropertiesListValuesByPropertyID method to retrieve the valid ID values for a list field. 
MultiSelectionList Comma separated list of ID values from a list. Use the GetDynamicPropertiesListValuesByPropertyID method to retrieve the valid ID values for a list field. 
Boolean true or false 
DateTime Date/time value</description>
        <inlineHelpText>The AdBook Property Type: 
List / Text / Integer / Decimal / DateTime / Boolean / MultiSelectionList</inlineHelpText>
        <label>UDF Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>MultiLineText</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>MultiSelectionList</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__IsVisible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Can users see this dynamic property?</description>
        <inlineHelpText>Can users see this dynamic property?</inlineHelpText>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Label__c</fullName>
        <description>AdBook Dynamic Property Name</description>
        <inlineHelpText>AdBook UDF Name</inlineHelpText>
        <label>AdBook UDF Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__LimitedSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this UDF included when only doing a limited sync update to AdBook?</description>
        <inlineHelpText>Is this UDF included when only doing a limited sync update to AdBook?</inlineHelpText>
        <label>LimitedSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ObjectType__c</fullName>
        <description>Is this Dynamic Property for an &apos;Order&apos; or a &apos;Drop&apos;</description>
        <inlineHelpText>Is this Dynamic Property for an &apos;Order&apos; or a &apos;Drop&apos;</inlineHelpText>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Drop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB2__Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Defines display ordering</description>
        <inlineHelpText>Defines display ordering</inlineHelpText>
        <label>Sequence</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AdBook UDF</label>
    <listViews>
        <fullName>AB2__FatTail_Detail_View</fullName>
        <columns>NAME</columns>
        <columns>AB2__Label__c</columns>
        <columns>AB2__IsVisible__c</columns>
        <columns>AB2__ObjectType__c</columns>
        <columns>AB2__Sequence__c</columns>
        <columns>AB2__DynamicPropertyID__c</columns>
        <columns>AB2__DynamicPropertyType__c</columns>
        <filterScope>Everything</filterScope>
        <label>FatTail Detail View</label>
    </listViews>
    <nameField>
        <label>AdBook UDF Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdBook UDF&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>